# aoc-2021

./: .gitignore  Cargo.toml  justfile  start_solve.py
.github/workflows/: bench.yml
benchmark/: Cargo.toml
benchmark/benches/: benchmark.rs  criterion.rs  iai.rs
day01/src/: lib.rs
day02/src/: lib.rs  main.rs
day03/src/: lib.rs
day04/src/: lib.rs
day05/src/: lib.rs
day06/src/: lib.rs
day07/: data.csv
day07/src/: lib.rs
day08/: Cargo.toml
day08/src/: lib.rs
day09/: Cargo.toml
day09/src/: lib.rs
day10/src/: lib.rs
day11/: Cargo.toml
day11/src/: lib.rs
day12/: Cargo.toml
day12/src/: lib.rs
day13/: Cargo.toml
day13/src/: lib.rs
day14/: Cargo.toml  prototype.py
day14/src/: lib.rs
day15/src/: lib.rs  main.rs
day16/: Cargo.toml
day16/src/: lib.rs
day17/src/: lib.rs  main.rs
day18/: Cargo.toml
day18/src/: lib.rs  main.rs
day19/: Cargo.toml
day19/src/: lib.rs  main.rs
day20/: Cargo.toml
day20/src/: lib.rs  main.rs
day21/: Cargo.toml  prototype.py
day21/src/: lib.rs  main.rs
day22/src/: lib.rs  main.rs
day23/: Cargo.toml
day23/src/: lib.rs  main.rs
day24/: WRITEUP.md  massage.py
day24/src/: input_params.txt  lib.rs  main.rs
day25/src/: lib.rs  main.rs
