[package]
name = "aoc-benchmark"
version = "1.0.0"
authors = ["PurpleMyst <PurpleMyst@users.noreply.github.com>"]
edition = "2018"

[dependencies]
day01 = { path = "../day01" }
day02 = { path = "../day02" }
day03 = { path = "../day03" }
day04 = { path = "../day04" }
day05 = { path = "../day05" }
day06 = { path = "../day06" }
day07 = { path = "../day07" }
day08 = { path = "../day08" }
day09 = { path = "../day09" }
day10 = { path = "../day10" }
day11 = { path = "../day11" }
day12 = { path = "../day12" }
day13 = { path = "../day13" }
day14 = { path = "../day14" }
day15 = { path = "../day15" }
day16 = { path = "../day16" }
day17 = { path = "../day17" }
day18 = { path = "../day18" }
day19 = { path = "../day19" }
day20 = { path = "../day20" }
day21 = { path = "../day21" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
iai = "0.1"

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "iai"
harness = false

[lib]
bench = false

[features]
